Fixed buttons in the admin menu: - css_icon_map.py to include the icons we need - menuitems.django.html to add icons to the menu - updated cradmin.py to override MenuItem class to use another template Fixed lines being too long several places. Fixed get_or_create method which was unnecessary as Django includes it Fixed Delete button in admin page not being red Updated font-awesome to v5, but it should be noted that cradmin-legacy uses v4, and the buttons in the admin page will use that as well.

--- a/trix/trix_student/static/trix_student/src/less/font-awesome.less
+++ b/trix/trix_student/static/trix_student/src/less/font-awesome.less
@@ -1,16 +1,14 @@
 // Variables
-@import "fontawesome/less/variables";
-@fa-font-path: "../vendor/fonts";
+@import "components-font-awesome/less/_variables";
+@fa-font-path: "../webfonts";
 
 // All fontawesome components
-@import "fontawesome/less/mixins";
-@import "fontawesome/less/path";
-@import "fontawesome/less/core";
-@import "fontawesome/less/larger";
-@import "fontawesome/less/fixed-width";
-@import "fontawesome/less/list";
-@import "fontawesome/less/bordered-pulled";
-@import "fontawesome/less/spinning";
-@import "fontawesome/less/rotated-flipped";
-@import "fontawesome/less/stacked";
-@import "fontawesome/less/icons";
+@import "components-font-awesome/less/_bordered-pulled";
+@import "components-font-awesome/less/_core";
+@import "components-font-awesome/less/_fixed-width";
+@import "components-font-awesome/less/_icons";
+@import "components-font-awesome/less/_mixins";
+@import "components-font-awesome/less/_larger";
+@import "components-font-awesome/less/_list";
+@import "components-font-awesome/less/_rotated-flipped";
+@import "components-font-awesome/less/_stacked";
